--- a/glint/index.html
+++ b/glint/index.html
@@ -33,7 +33,12 @@
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+    <style>
+        .test{
+         color: #f7941e;   
+/*            background: #f1592a;*/
+        }
+    </style>
 </head>
 
 <body id="top">
@@ -98,7 +103,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/2.jpeg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -107,13 +112,13 @@
 
             <div class="row home-content__main">
 
-                <h3>Welcome to Glint</h3>
+                <h3>Welcome to <span class="test">South India Seed Exporters</span></h3>
 
                 <h1>
-                    We are a creative group <br>
-                    of people who design <br>
-                    influential brands and <br>
-                    digital experiences.
+                    We are a group<br>
+                    of people commited to <br>
+                    producing the best <br>
+                    quality peanut seeds
                 </h1>
 
                 <div class="home-content__buttons">
@@ -174,11 +179,11 @@
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                    We at <span class="test">South India Seed Exporters</span> are the leading manufacturers and exporters of quality Indian Peanut, spices, and take pride in continuing to be part of India's traditional export of peanut, capable of meeting the standards of the international Peanut industry.
+                    We at South India Seed Exporters are the leading manufacturers and exporters of quality Indian Peanut, spices, and take pride in continuing to be part of India's traditional export of peanut, capable of meeting the standards of the international Peanut industry.
                 </p>
                 <p>Our company is registered with "APEDA". Our team comprises of highly dedicated & trained professionals to perform various functions such as purchase, processing, quality control and packaging etc. These professionals are best in the industry and strive to achieve perfection in all aspects of their fields of work.
                 </p>
-                <p><span class="test">South India Seed Exporters</span> has been started with a mission to serve the world best quality peanuts. by serving and helping each entity in the process. We have tie ups with Farmers through “SERP” who we help in growing natural and pure peanuts.
+                <p>South India Seed Exporters has been started with a mission to serve the world best quality peanuts. by serving and helping each entity in the process. We have tie ups with Farmers through “SERP” who we help in growing natural and pure peanuts.
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -215,8 +220,10 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
-                <h1 class="display-2">We’ve got everything you need to launch and grow your business</h1>
+                <h3 class="subhead">Why Us</h3>
+                <h1 class="display-2">We are committed to provide the best quality product to our customers and agreed upon terms.
+
+</h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -227,10 +234,8 @@
                     <i class="icon-paint-brush"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Brand Identity</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Prompt Delivery</h3>
+                    <p>Our Emphasis is to provide timely and hassle free delivery service as promised.
                     </p>
                 </div>
             </div>
@@ -240,10 +245,8 @@
                     <i class="icon-group"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h2">Illustration</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Premium Quality</h3>
+                    <p>We have high standards and our goal is to sell the highest quality peanuts we possibly can to our customers
                     </p>
                 </div>
             </div>
@@ -253,10 +256,8 @@
                     <i class="icon-megaphone"></i>
                 </div>  
                 <div class="service-text">
-                    <h3 class="h2">Marketing</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h2">Most Competitive Prices</h3>
+                    <p>We keep up our prices up-to date and precise so our customers are assured of best prices
                     </p>
                 </div>
             </div>
