--- a/glint/index.html
+++ b/glint/index.html
@@ -38,6 +38,10 @@
          color: #f7941e;   
 /*            background: #f1592a;*/
         }
+
+        p.light-text{
+            color: #e6e6ea;
+        }
     </style>
 </head>
 
@@ -115,15 +119,14 @@
                 <h3>Welcome to <span class="test">South India Seed Exporters</span></h3>
 
                 <h1>
-                    We are a group<br>
-                    of people commited to <br>
-                    producing the best <br>
-                    quality peanut seeds
+                    We produce<br>
+                    the best quality <br>
+                    <i>peanut</i> & <i>spices</i>
                 </h1>
 
                 <div class="home-content__buttons">
                     <a href="#contact" class="smoothscroll btn btn--stroke">
-                        Start a Project
+                        Contact Us
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Us
@@ -147,18 +150,6 @@
             <li>
                 <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
-            <li>
-                <a href="#0"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
-            </li>
-            <li>
-                <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-            <li>
-                <a href="#0"><i class="fa fa-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#0"><i class="fa fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
-            </li>
         </ul> 
         <!-- end home-social -->
 
@@ -167,7 +158,7 @@
 
     <!-- about
     ================================================== -->
-    <section id='about' class="s-about">
+    <section id='about' class="s-about" data-image-src="images/2.jpeg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
@@ -178,12 +169,12 @@
 
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
-                <p>
-                    We at South India Seed Exporters are the leading manufacturers and exporters of quality Indian Peanut, spices, and take pride in continuing to be part of India's traditional export of peanut, capable of meeting the standards of the international Peanut industry.
+                <p class="light-text">
+                    We at South India Seed Exporters are the leading manufacturers and exporters of  <b>quality Indian  Peanut, spices,</b> and take pride in continuing to be part of India's traditional export of peanut, capable of meeting the standards of the international Peanut industry.
                 </p>
-                <p>Our company is registered with "APEDA". Our team comprises of highly dedicated & trained professionals to perform various functions such as purchase, processing, quality control and packaging etc. These professionals are best in the industry and strive to achieve perfection in all aspects of their fields of work.
+                <p class="light-text">Our company is registered with "APEDA". Our team comprises of highly dedicated & trained professionals to perform various functions such as purchase, processing, quality control and packaging etc. These professionals are best in the industry and strive to achieve perfection in all aspects of their fields of work.
                 </p>
-                <p>South India Seed Exporters has been started with a mission to serve the world best quality peanuts. by serving and helping each entity in the process. We have tie ups with Farmers through “SERP” who we help in growing natural and pure peanuts.
+                <p class="light-text">South India Seed Exporters has been started with a mission to serve the world best quality peanuts. by serving and helping each entity in the process. We have tie ups with Farmers through “SERP” who we help in growing natural and pure peanuts.
                 </p>
             </div>
         </div> <!-- end about-desc -->
